# rs-bg-open

./: .dockerignore  .env.example  .env.production.example  .gitignore  .gitlab-ci.yml  API_STRUCTURE.md  CONTRAGENT_API_SETUP.md  CONTROLISY_MODULE.md  COUNTERPARTS_MODULE.md  Cargo.toml  Dockerfile.accounting  GITLAB_UPLOAD.md  INTRASTAT_MODULE.md  INTRASTAT_SETUP.md  LICENSE  MIGRATION_CHECKLIST.md  MIGRATION_PLAN.md  Makefile  NOTICE  QUICKSTART.md  README-ENG.md  README-REACT.md  README.md  backup_critical_data.sh  build-frontend.sh  configdb.example.json  debug_parser  debug_parser.rs  debug_parser_fixed  debug_parser_new  docker-compose.yml  import_chart_of_accounts.py  package-lock.json  run-dev.sh  simple_controlisy_test  simple_controlisy_test.rs  stop-dev.sh  test_controlisy_multiple.xml  test_controlisy_multiple_docs  test_controlisy_multiple_docs.rs  (+8 more)
backend/: Cargo.toml  test_saft_v2.rs
backend/docs/: VAT_NAP_EXPORT.md
backend/src/: auth.rs  config.rs  db.rs  main.rs
backend/src/data/: chart_of_accounts.rs  mod.rs
backend/src/entities/: account.rs  ai_accounting_setting.rs  ai_bank_accounting_setting.rs  average_cost_correction.rs  bank_import.rs  bank_profile.rs  company.rs  contragent_setting.rs  controlisy_imports.rs  counterpart.rs  currency.rs  depreciation_journal.rs  entry_line.rs  exchange_rate.rs  fixed_asset.rs  fixed_asset_category.rs  global_contragent.rs  intrastat_account_mapping.rs  intrastat_declaration.rs  intrastat_declaration_item.rs  intrastat_nomenclature.rs  intrastat_settings.rs  inventory_balance.rs  inventory_movement.rs  journal_entry.rs  mod.rs  saft.rs  user.rs  user_company.rs  user_group.rs  vat_rate.rs  vat_return.rs
backend/src/graphql/: accounting_resolvers.rs  admin_resolvers.rs  ai_accounting_settings_resolvers.rs  ai_bank_accounting_settings_resolvers.rs  bank_resolvers.rs  context.rs  contragent_resolvers.rs  controlisy_resolver.rs  currency_resolvers.rs  fixed_assets_resolvers.rs  intrastat_resolver.rs  inventory_resolvers.rs  invoice_resolver.rs  maintenance_resolver.rs  mod.rs  mutation.rs  query.rs  reports_resolvers.rs  saft_resolvers.rs  (+2 more)
docs/: API.md  (+30 more)
(+160 files in other folders)
