[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9"
actix-cors = "0.7"
async-graphql = { version = "7.0", features = ["dataloader", "chrono", "uuid", "decimal"] }
async-graphql-actix-web = "7.0"
async-trait = "0.1"
futures-util = "0.3"
sea-orm = { version = "1.1", features = ["sqlx-postgres", "runtime-tokio-native-tls", "macros", "with-chrono", "with-uuid", "with-rust_decimal"] }
migration = { path = "../migration" }
shared = { path = "../shared", features = ["backend"] }

# Additional dependencies for accounting system
rust_decimal = { version = "1.37", features = ["serde", "db-postgres"] }
rust_decimal_macros = "1.37"
bcrypt = "0.16"
jsonwebtoken = "9.3"
validator = { version = "0.18", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio-native-tls", "chrono", "uuid", "rust_decimal"] }
quick-xml = { version = "0.36", features = ["serialize"] }
serde-xml-rs = "0.6"
regex = "1.0"
csv = "1.3"
encoding_rs = "0.8"
aws-sdk-s3 = { version = "1.37.0", features = ["rustls"] }
aws-smithy-types = "1.3.2"
pdf-extract = "0.7"

# Report generation dependencies
rust_xlsxwriter = "0.77"
base64 = "0.22"
headless_chrome = "1.0"
urlencoding = "2.1"

serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

dotenv = "0.15"
config = "0.14"
